--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,2 +1,14 @@
 // Базовые настройки сетки
 @import 'grid'
+
+// Настройки шрифтов
+@import 'fonts'
+
+// Настройки цветов
+@import 'colors'
+
+// Настройки интерфейса
+@import 'interface'
+
+// Навигация шапки сайта
+@import 'blocks/navbar'
