--- a/sass/_grid.sass
+++ b/sass/_grid.sass
@@ -4,5 +4,7 @@
 .container
 	max-width: 1234px
 	margin: auto
-	padding-left: 15px
-	padding-right: 15px
+	padding: 0 15px
+	@media (max-width: 1300px)
+		.container
+			padding: 0 15px
