--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -20,3 +20,15 @@
     font-size: 19px
     color: $text-color
 
+@media (max-width: 768px)
+  .hero
+    padding-top: 120px
+    padding-bottom: 60px
+    &__title
+      font-size: 36px
+    &__description
+      font-size: 19px
+    &__link
+      display: block
+      margin-top: 20px
+
