--- a/sass/blocks/_navbar.sass
+++ b/sass/blocks/_navbar.sass
@@ -5,17 +5,23 @@
     min-height: 140px
     justify-content: space-between
   &__logo
-    margin-right: 30px
+    margin-right: 20px
 .menu
-  width: 600px
+  display: flex
+  justify-content: space-between
   &__list
     display: flex
+    width: 440px
     list-style: none
     margin: 0
     padding: 0
-    justify-content: space-between
+    justify-content: space-around
     align-items: center
   &__link
     +bold
     font-size: 19px
     color: $text-color
+@media (max-width: 768px)
+  .menu
+    &__list
+      display: none
