--- a/sass/blocks/_hero.sass
+++ b/sass/blocks/_hero.sass
@@ -20,6 +20,10 @@
     font-size: 19px
     color: $text-color
 
+@media (max-width: 1200px)
+  .hero
+    padding-bottom: 40px
+
 @media (max-width: 768px)
   .hero
     padding-top: 120px
