--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,6 @@ body {
 
 @media (max-width: 1200px) {
   body {
-    background-position-y: 120px;
     background-size: contain;
   }
 }
@@ -82,7 +81,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  min-height: 140px;
+  height: 140px;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -120,6 +119,12 @@ body {
   font-family: 'Brown Bold', sans-serif;
   font-size: 19px;
   color: #32325d;
+}
+
+@media (max-width: 1200px) {
+  .navbar-wrap {
+    height: 80px;
+  }
 }
 
 @media (max-width: 768px) {
