Реализован блок с описанием того, чем занимается компания + адаптивность

--- a/css/style.css
+++ b/css/style.css
@@ -301,6 +301,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  background: url("../img/services_bg.png") bottom center no-repeat;
+  padding-bottom: 90px;
 }
 
 .services-wrap {
@@ -360,5 +362,207 @@ body {
   font-size: 16px;
   font-family: 'Brown Light', sans-serif;
   color: #525f7f;
+}
+
+.wedo {
+  background: url("../img/finances.png") bottom 500px right no-repeat;
+}
+
+.wedo-wrap {
+  padding: 120px 0 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+
+.wedo-wrap-safety {
+  width: 100%;
+  background: url("../img/safety.png") top 70px right no-repeat;
+}
+
+.wedo-wrap-move {
+  width: 100%;
+  background: url("../img/move.png") top 240px left no-repeat;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+}
+
+.wedo-safety__title, .wedo-move__title, .wedo-finances__title {
+  font-family: 'Brown Light', sans-serif;
+  font-size: 48px;
+  color: #32325d;
+}
+
+.wedo-safety__description, .wedo-move__description, .wedo-finances__description {
+  font-size: 23px;
+  font-family: 'Brown Light', sans-serif;
+  color: #525f7f;
+}
+
+.wedo__link {
+  font-size: 19px;
+  color: #32325d;
+  font-family: 'Brown Regular', sans-serif;
+}
+
+.wedo__button {
+  text-transform: uppercase;
+  margin-right: 30px;
+}
+
+.wedo-safety {
+  max-width: 480px;
+}
+
+.wedo-options {
+  list-style: none;
+  margin: 50px 0 40px;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.wedo-options__item {
+  max-width: 220px;
+}
+
+.wedo-options__title {
+  font-size: 30px;
+  font-family: 'Brown Light', sans-serif;
+  color: #32325d;
+  margin: 0;
+}
+
+.wedo-options__description {
+  font-size: 16px;
+  font-family: 'Brown Light', sans-serif;
+  color: #525f7f;
+}
+
+.wedo-move {
+  max-width: 560px;
+  margin: 200px 0;
+}
+
+.wedo-finances {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.wedo-finances__heading {
+  max-width: 660px;
+}
+
+.wedo-services {
+  margin: 30px 0 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.wedo-services-block {
+  margin-top: 80px;
+}
+
+.wedo-services-block:first-child {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 100%;
+          flex: 1 1 100%;
+}
+
+.wedo-services-block__title {
+  font-size: 30px;
+  font-family: 'Brown Regular', sans-serif;
+  color: #32325d;
+}
+
+.wedo-services-block__list {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.wedo-services-block__item {
+  margin-top: 35px;
+  padding-left: 30px;
+  background: url("../img/check.png") 0 3px no-repeat;
+}
+
+.wedo-services-block__text {
+  font-size: 20px;
+  font-family: 'Brown Light', sans-serif;
+  color: #32325d;
+}
+
+@media (max-width: 1200px) {
+  .wedo {
+    background: none;
+  }
+  .wedo-wrap-safety, .wedo-wrap-move {
+    background-size: 40%;
+    background-position-y: center;
+  }
+}
+
+@media (max-width: 992px) {
+  .wedo-wrap {
+    padding: 40px 0;
+  }
+  .wedo-wrap-safety, .wedo-wrap-move {
+    background: none;
+  }
+  .wedo-move {
+    margin: 40px 0;
+  }
+  .wedo-services-block {
+    margin-top: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .wedo-safety__title, .wedo-move__title, .wedo-finances__title {
+    font-family: 'Brown Light', sans-serif;
+    font-size: 36px;
+    color: #32325d;
+  }
+  .wedo-safety__description, .wedo-move__description, .wedo-finances__description {
+    font-size: 19px;
+    font-family: 'Brown Light', sans-serif;
+    color: #525f7f;
+  }
+}
+
+@media (max-width: 480px) {
+  .wedo__link {
+    display: block;
+    margin-top: 30px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
