--- a/sass/blocks/_services.sass
+++ b/sass/blocks/_services.sass
@@ -2,6 +2,8 @@
   text-align: center
   display: flex
   flex-direction: column
+  background: url("../img/services_bg.png") bottom center no-repeat
+  padding-bottom: 90px
   &-wrap
     padding: 60px 0
   &-heading
