--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -1,6 +1,8 @@
 body
   +light
   background: #fff url('../img/body_header.png') top center no-repeat
+  max-width: 1920px
+  margin: auto
 
 .button
   padding: 10px 25px 10px
