Реализован блок футера с адаптивностью

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -27,3 +27,9 @@
 
 // Форма обратной связи
 @import 'blocks/feedback'
+
+// Навигация футера сайта
+@import 'blocks/navigation'
+
+// Блок копирайта
+@import 'blocks/copyright'
