--- a/css/style.css
+++ b/css/style.css
@@ -70,10 +70,18 @@ body {
   text-decoration: none;
 }
 
+.link_color_white {
+  color: rgba(255, 255, 255, 0.8);
+}
+
 @media (max-width: 1200px) {
   body {
     background-size: contain;
   }
+}
+
+.footer {
+  background-color: #212240;
 }
 
 .navbar-wrap {
@@ -681,6 +689,177 @@ body {
   }
   .feedback-form__link::after {
     visibility: visible;
+  }
+}
+
+.navigation {
+  padding: 130px 0 30px;
+}
+
+.navigation-wrap {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.navigation-info {
+  min-width: 170px;
+}
+
+.navigation-info__logo {
+  margin-bottom: 50px;
+}
+
+.navigation-phone {
+  margin-bottom: 10px;
+}
+
+.navigation-phone__text {
+  color: rgba(255, 255, 255, 0.8);
+  font-size: 16px;
+}
+
+.navigation-mail {
+  margin: 35px 0;
+}
+
+.navigation-mail__link {
+  font-size: 16px;
+  font-family: 'Brown Regular', sans-serif;
+}
+
+.navigation-col1, .navigation-col2, .navigation-col3 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.navigation-col1__link, .navigation-col2__link, .navigation-col3__link {
+  font-size: 16px;
+}
+
+.navigation-col1 {
+  height: 320px;
+}
+
+.navigation-col2 {
+  max-height: 260px;
+}
+
+.navigation-col2__link {
+  font-family: 'Brown Regular', sans-serif;
+}
+
+.navigation-col3 {
+  max-height: 210px;
+}
+
+.social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.social__link {
+  color: #555377;
+}
+
+.social__link:hover {
+  color: rgba(255, 255, 255, 0.8);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+@media (max-width: 992px) {
+  .navigation {
+    padding: 50px 0;
+  }
+  .navigation-info {
+    margin-right: 40px;
+  }
+  .navigation-col1, .navigation-col2, .navigation-col3 {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 150px;
+            flex: 1 1 150px;
+    margin-left: 20px;
+  }
+}
+
+@media (max-width: 640px) {
+  .navigation-col1, .navigation-col2, .navigation-col3 {
+    display: none;
+  }
+  .navigation-info {
+    margin: 0 auto;
+  }
+}
+
+.copyright-wrap {
+  height: 220px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.copyright__text {
+  font-family: 'Brown Light', sans-serif;
+  font-size: 16px;
+  color: #525f7f;
+}
+
+.policy {
+  width: 270px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.policy__link {
+  color: #525f7f;
+}
+
+.policy__link:hover {
+  color: rgba(255, 255, 255, 0.8);
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+@media (max-width: 992px) {
+  .copyright-wrap {
+    height: 80px;
+  }
+}
+
+@media (max-width: 640px) {
+  .copyright-wrap {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
   }
 }
 /*# sourceMappingURL=style.css.map */
