--- a/sass/_interface.sass
+++ b/sass/_interface.sass
@@ -22,6 +22,13 @@ body
 .link
   text-decoration: none
 
+.link_color_white
+  color: rgba(255, 255, 255, 0.8)
+
+
 @media (max-width: 1200px)
   body
     background-size: contain
+
+.footer
+  background-color: #212240
